<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="10dp" >

        <EditText
            android:id="@+id/txtTaiKhoan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_top_bg"
            android:drawableStart="@drawable/user"
            android:hint="@string/user"
            android:padding="10dp"
            android:textColorHint="#bbbbbb" />

        <EditText
            android:id="@+id/txtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-2dp"
            android:background="@drawable/edittext_bottom_bg"
            android:drawableStart="@drawable/password"
            android:hint="@string/password"
            android:padding="10dp"
            android:inputType="textPassword"
            android:textColorHint="#bbbbbb" />

        <Button
            android:id="@+id/btnSingIn"
            style="@style/DefaultButtonText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:background="@drawable/button_default_bg"
            android:padding="10dp"
            android:text="@string/sign_in" />
        <!-- Link to Registration Screen -->

        <TextView
            android:id="@+id/link_to_register"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:layout_marginTop="10dip"
            android:gravity="center"
            android:text="@string/singup_tv"
            android:textColor="#0b84aa"
            android:textSize="20sp" />
    </LinearLayout>

</RelativeLayout>